# explore_main

./: README.md
next/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
next/src/: middleware.ts
next/src/app/: globals.css  page.tsx
next/src/app/(main)/: layout.tsx
next/src/app/(main)/explore/: idea.txt  page.tsx  websocket.ts
next/src/app/(main)/explore/[id]/: page.tsx
next/src/app/(main)/explore/cards/: modal.tsx  place.tsx
next/src/app/(main)/food/: page.tsx
next/src/app/(main)/food/[id]/: page.tsx
next/src/app/(main)/food/cards/: modal.tsx  place.tsx
next/src/app/(main)/history/: page.tsx
next/src/app/(main)/rooms/: page.tsx
next/src/app/(main)/rooms/[id]/: page.tsx
next/src/app/(main)/rooms/cards/: modal.tsx  place.tsx
next/src/components/: feature.tsx  input.tsx  nav.tsx  sidebar.tsx
next/src/components/star/: rating.tsx
server/: Cargo.toml  page.html
server/database/: db.sql
server/src/: chat.rs  lib.rs  main.rs
server/src/models/: mod.rs  place.rs  room.rs  zomato.rs
server/src/schema/: schema.rs
