[package]
name = "promptrepo"
version = "0.1.0"
edition = "2021"

[dependencies]
ZuckGate = "0.1.8"
futures-util = "0.3.31"
http-scrap = "0.1.1129"
native-tls = "0.2.13"
rusty-format = "0.1.4"
rusty-postgres = { version = "0.1.19-beta", features = ["async"] }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
